--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "sass": "^1.32.12",
     "web-vitals": "^1.1.1"
   },
